force-app/main/default/objects/RMS_AnomalyDetection__c/RMS_AnomalyDetection__c.object-meta.xml
<CustomObject>
    <description>検知された機器異常を通知するトリガーオブジェクト</description>
    <label>異常検知</label>
    <nameField>
        <label>異常検知名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>