force-app/main/default/objects/RMS_AnomalyDetection__c/fields/device_mng_id__c.field-meta.xml
<CustomField>
    <fullName>device_mng_id__c</fullName>
    <label>機器管理</label>
    <length>36</length>
    <referenceTo>DEVICE_MNG__x</referenceTo>
    <relationshipLabel>異常検知</relationshipLabel>
    <relationshipName>device_mng_LKUP</relationshipName>
    <type>ExternalLookup</type>
</CustomField>