force-app/main/default/objects/RMS_AnomalyDetection__c/fields/device_status_disp__c.field-meta.xml
<CustomField>
    <fullName>device_status_disp__c</fullName>
    <label>機器状態</label>
    <length>100</length>
    <type>Text</type>
</CustomField>