force-app/main/default/objects/RMS_AnomalyDetection__c/fields/device_status_mst_id__c.field-meta.xml
<CustomField>
    <fullName>device_status_mst_id__c</fullName>
    <label>機器状態ID</label>
    <length>36</length>
    <referenceTo>DEVICE_STATUS_MST__x</referenceTo>
    <relationshipLabel>異常検知</relationshipLabel>
    <relationshipName>device_status_mst_LKUP</relationshipName>
    <type>ExternalLookup</type>
</CustomField>