force-app/main/default/objects/RMS_AnomalyDetection__c/fields/device_status_mst_id_formula__c.field-meta.xml
<CustomField>
    <fullName>device_status_mst_id_formula__c</fullName>
    <description>プロセスビルダーで外部IDを参照するための項目</description>
    <formula>device_status_mst_id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>機器状態（数式）</label>
    <type>Text</type>
</CustomField>