force-app/main/default/objects/RMS_AnomalyDetection__c/fields/eventTime__c.field-meta.xml
<CustomField>
    <fullName>eventTime__c</fullName>
    <label>検知日時</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>