force-app/main/default/objects/RMS_AnomalyDetection__c/fields/provide_inf_id__c.field-meta.xml
<CustomField>
    <fullName>provide_inf_id__c</fullName>
    <label>提供先</label>
    <length>36</length>
    <referenceTo>PROVIDE_INF__x</referenceTo>
    <relationshipLabel>異常検知</relationshipLabel>
    <relationshipName>provide_inf_LKUP</relationshipName>
    <type>ExternalLookup</type>
</CustomField>