force-app/main/default/objects/RMS_AnomalyDetection__c/fields/service_core_id__c.field-meta.xml
<CustomField>
    <fullName>service_core_id__c</fullName>
    <label>サービスコア</label>
    <length>36</length>
    <referenceTo>SERVICE_CORE__x</referenceTo>
    <relationshipLabel>異常検知</relationshipLabel>
    <relationshipName>RMS_AnomalyDetections</relationshipName>
    <type>ExternalLookup</type>
</CustomField>