force-app/main/default/objects/RMS_AnomalyDetection__c/fields/shock__c.field-meta.xml
<CustomField>
    <fullName>shock__c</fullName>
    <defaultValue>false</defaultValue>
    <label>衝撃検知</label>
    <type>Checkbox</type>
</CustomField>