force-app/main/default/objects/RMS_AnomalyDetection__c/fields/sights_camera_inf__c.field-meta.xml
<CustomField>
    <fullName>sights_camera_inf__c</fullName>
    <label>Sightsカメラ</label>
    <length>36</length>
    <referenceTo>SIGHTS_CAMERA_INF__x</referenceTo>
    <relationshipLabel>異常検知</relationshipLabel>
    <relationshipName>sights_camera_inf_LKUP</relationshipName>
    <type>ExternalLookup</type>
</CustomField>