force-app/main/default/objects/RMS_AnomalyDetection__c/fields/signal_lost__c.field-meta.xml
<CustomField>
    <fullName>signal_lost__c</fullName>
    <defaultValue>false</defaultValue>
    <label>映像入力ロスト</label>
    <type>Checkbox</type>
</CustomField>