force-app/main/default/objects/RMS_AnomalyDetection__c/fields/tamper__c.field-meta.xml
<CustomField>
    <fullName>tamper__c</fullName>
    <defaultValue>false</defaultValue>
    <label>画策検知</label>
    <type>Checkbox</type>
</CustomField>