force-app/main/default/objects/RMS_AnomalyDetection__c/fields/temperature__c.field-meta.xml
<CustomField>
    <fullName>temperature__c</fullName>
    <defaultValue>false</defaultValue>
    <label>温度異常</label>
    <type>Checkbox</type>
</CustomField>