force-app/main/default/objects/RMS_AnomalyDetection__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>eventTime__c</columns>
    <columns>device_mng_id__c</columns>
    <columns>device_status_mst_id__c</columns>
    <columns>sights_camera_inf__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>